--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 serv_addr = "0.0.0.0:8080"
-dsn = "root:@tcp(127.0.0.1:3306)/neup_repair?parseTime=true"
+dsn = "root:@tcp(127.0.0.1:3306)/neup_repair?parseTime=true&loc=Local"
 frontend_root = "http://127.0.0.1:3333/"
